feat: expose playwright version and refine Playwright setup